@startuml
'https://plantuml.com/sequence-diagram

interface AbstractTrajectory
{
    +{abstract}shoot(int locationX, int locationY, int shootNum, int power, int LocspeedY, boolean isHero):List<BaseBullet>
}

class Circle
{
    +shoot(int locationX, int locationY, int shootNum, int power, int LocspeedY, boolean isHero):List<BaseBullet>
}

class Scatter
{
    +shoot(int locationX, int locationY, int shootNum, int power, int LocspeedY, boolean isHero):List<BaseBullet>
}

class Direct
{
    +shoot(int locationX, int locationY, int shootNum, int power, int LocspeedY, boolean isHero):List<BaseBullet>
}

class PlusScatter
{
    +shoot(int locationX, int locationY, int shootNum, int power, int LocspeedY, boolean isHero):List<BaseBullet>
}
AbstractTrajectory <|.. Circle
AbstractTrajectory <|.. Scatter
AbstractTrajectory <|.. Direct
Scatter <|-- PlusScatter

abstract class AbstractAircraft
{
	# maxHp:int
    # hp:int
    - AbstractTrajectory abstractTrajectory
    + AbstractAircraft(int locationX, int locationY, int speedX, int speedY, int hp)
    + decreaseHp(int decrease):void
    + getHp():int
    + {abstract} shoot():List<BaseBullet>
    + setTrajectory(AbstractTrajectory abstractTrajectory):void
    + executeShoot(int locationX, int locationY, int shootNum, int power, int LocspeedY, boolean isHero):List<BaseBullet>
}
AbstractAircraft o--> AbstractTrajectory
HeroAircraft --|> AbstractAircraft
MobEnemy --|> AbstractAircraft
BossEnemy --|> AbstractAircraft
EliteEnemy --|> AbstractAircraft
PlusEnemy --|> AbstractAircraft
PlusBoss --|> AbstractAircraft
Mate --|> AbstractAircraft
@enduml